--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <label>
         <p>↓Введіть вашу електронну пошту↓</p>
-        <input type="email">
+        <input type="email" placeholder="type email">
     </label>
         <legend>Чи хочете ви підписатися? <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/1200px-Telegram_2019_Logo.svg.png" alt="" width="20px"></legend>
 
